--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "description": "Bot for running instant runoff voting elections in a Discord channel.",
     "main": "bot.js",
     "author": "Matt VanderKolk",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/PatientSamurai/InstantRunoffBot.git"
+    },
+    "license": "MIT",
     "dependencies": {
         "discord.io": "^2.5.3",
         "winston": "^3.2.1"
