--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "license": "MIT",
     "dependencies": {
-        "discord.js": "^12.0.2"
+        "discord.js": "^12.0.2",
+        "nodemon": "^2.0.2"
     }
 }
