--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
   },
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "start": "tsc && node .",
-    "test": "npm run build && nodemon --inspect",
-    "build": "tsc && tslint -c tslint.json -p tsconfig.json"
+    "build:dev": "tsc && tslint -c tslint.json -p tsconfig.json",
+    "start:dev": "node --inspect -r ts-node/register ./src/index.ts",
+    "test": "nodemon"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "exec": "npm run start:dev",
+    "ext": "ts"
   },
   "dependencies": {
     "@types/node": "^12.12.31",
@@ -22,6 +31,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
+    "ts-node": "^8.8.1",
     "tslint": "^6.1.0"
   }
 }
