--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^12.20.15",
     "@types/ws": "^7.4.6",
     "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "typescript": "^3.9.10"
   },
   "devDependencies": {
